--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Fady10emad.github.io/E-comm/",
+  "homepage": "http://Fady10emad.github.io/EcommerceWEB-Route",
   "name": "ecommerceprojectdliver",
   "private": true,
   "version": "0.0.0",
